@@ -1,3 +1,8 @@
+2005-04-21  Chris Burdess  <dog@gnu.org>
+
+	* gnu/java/net/CRLFInputStream.java: Rewrite to return
+	CRLF-delimited chunks.
+
 2005-04-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/net/URI.java:
